// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should renders as connected 1`] = `
<Component
  activeProjectID={null}
  dispatch={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`App should renders default 1`] = `
<styled.div>
  <Home />
</styled.div>
`;

exports[`App should renders with active project 1`] = `
<styled.div>
  <Editor />
</styled.div>
`;
